--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
     "reset": "npm run rollback & npm run migrate & npm run seed",
-    "seed": "knex seed run"
+    "cleanup": "knex seed:run --specific=01-cleanup.js",
+    "seed": "knex seed:run"
   },
   "repository": {
     "type": "git",
